--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -9,3 +9,30 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+@layer base {
+  h1 {
+    @apply text-5xl;
+    @apply font-bold;
+  }
+  h2 {
+    @apply text-3xl;
+    @apply font-bold;
+  }
+  h3 {
+    @apply text-2xl;
+    @apply font-bold;
+  }
+  h4 {
+    @apply text-xl;
+    @apply font-semibold;
+  }
+  h5 {
+    @apply text-lg;
+    @apply font-semibold;
+  }
+  h6 {
+    @apply text-sm;
+    @apply font-semibold;
+  }
+}
